[package]
name = "irongrp"
edition = "2021"
version = "0.4.0"
authors = ["Johan Sjöblom <sjoblom.johan@gmail.com>"]
description = "A tool to convert StarCraft and WarCraft II GRP files to PNG using a PAL color palette."
license = "MIT"
repository = "https://github.com/sjoblomj/irongrp"
readme = "README.md"
categories = ["graphics", "multimedia::encoding", "parser-implementations", "game-development", "command-line-utilities"]
keywords = ["starcraft", "warcraft-2", "grp", "graphics", "converter"]

[[bin]]
name = "irongrp"
path = "src/main.rs"

[dependencies]
palpngrs = "0.2.0"
clap = { version = "4.5.37", features = ["derive"] }  # For CLI argument parsing
clap_complete = "4.5.50"   # For generating shell completions
log = "0.4.27"
simplelog = "0.12.2"

[dev-dependencies]
image = "0.25.6"
proptest = "1.6.0"

#[profile.release]
#opt-level = 3         # Optimize for maximum performance
#lto = true            # Enable Link-Time Optimization for smaller binaries
